packages/mutation-testing-elements/src/components/mutation-test-report-file/index.scss
@import "../../style/bootstrap-reboot.scss"; // import the variables

.bg-danger-light {
    background-color: #f2dede;
}

.bg-success-light {
    background-color: #dff0d8;
}


.bg-warning-light {
    background-color: #fcf8e3;
}

.bg-caution-light {
    background-color: adjust-color($color: theme-color('caution'), $lightness: 40%);
}

